--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
   <div class="credits">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.linkedin.com/in/igor-maquin/">Igor MAQUIN</a>.
   </div>
   <script src="index.js"></script>
 </body>
